--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -1194,7 +1194,7 @@ Il primo ciclo sarà riassuntivo del lavoro fino alla conclusione dell'RTB. Incl
         \hline
         \textbf{Problema} & \textbf{Soluzione adottata}\\
         \hline
-        Durante la presentazione al proponente è i pagamenti non sono andato a buon fine. & Si è deciso di individuare la causa in una riunione straordinaria a fine dell'incontro. La causa è stata individuata in un downtime dell'RPC della testnet impostato in MetaMask. Cambiando l'RPC si ovvia al problema. \\
+        Durante la presentazione al proponente alcune transazioni non sono andate a buon fine. & Si è deciso di individuare la causa in una riunione straordinaria a fine dell'incontro. La causa è stata individuata in un downtime dell'RPC della testnet impostato in MetaMask. Cambiando l'RPC si ovvia al problema. \\
         \hline
         Durante la riunione straordinaria, è emerso un problema che provoca occasionalmente il crash del server a causa di interruzioni alla connessione socket dal lato di Moralis. & Per ovviare a questi rari casi, poiché modificare l'architettura costerebbe troppo, si è optato per un riavvio automatico del server. \\
         \hline
