--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -51,7 +51,7 @@ La qualità dei documenti in generale è soddisfacente. \\
 L'indice di Gulpease dei documenti che superano la soglia ottimale rimane tendenzialmente costante. \\
 I documenti che superano solo la soglia di accettabilità hanno invece registrato un leggero aumento del loro indice, ma non raggiungono ancora l'ottimalità.\\
 
-Per alcune settimane nono sono stati effettuati test su alcuni prodotti software; questo perché non sono state effettuate modifiche. Ciò potrebbe dare l'impressione al proponente che la qualità di tali prodotti non sia garantita, riflettendo negativamente sull'operato del gruppo WSWS.
+Per alcune settimane non sono stati effettuati test su alcuni prodotti software; questo perché non sono state effettuate modifiche. Ciò potrebbe dare l'impressione al proponente che la qualità di tali prodotti non sia garantita, riflettendo negativamente sull'operato del gruppo WSWS.
 
 \paragraph{Qualità di processo}
 Negli ultimi due cicli di sprint è stato sovrastimato il costo in ore dei ruoli di amministratore, analista e progettista, mentre è stato sottostimato il costo in ore dei ruoli di responsabile e programmatore. \\
