--- a/docs/interni/verbali/2022_05_11_I/2022_05_11_I.tex
+++ b/docs/interni/verbali/2022_05_11_I/2022_05_11_I.tex
@@ -54,6 +54,6 @@ Inoltre è stata effettuata la validazione la quale è avvenuta correttamente, s
 Durante l'incontro con il proponente sono sorti problemi legati alle tecnologie utilizzate al momento della presentazione del prodotto realizzato. Durante il settimo ciclo di sprint è stata trovata una soluzione alternativa per ovviare ai problemi riscontrati.
 
 \section{Impegni presi}
-È stato scelto di contattare il Professore Vardanega con una mail nella mattinata del giorno 12/05/2022, per richiedere il colloquio per la CA.
+È stato deciso di contattare il Professore Vardanega con una mail nella mattinata del giorno 12/05/2022, per richiedere il colloquio per la CA.
 
 \end{document}
